# platanus-hack-25-team-41

./: .gitignore  CLAUDE.md  README.md  platanus-hack-project.json  project-description.md
.github/workflows/: deploy-backend.yml  deploy-bot.yml  deploy-frontend.yml  deploy.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  main.py  pyproject.toml
backend/app/: config.py  database.py
backend/app/models/: dog_sighting.py  reunion_report.py
backend/app/schemas/: dog_sighting.py  search.py
backend/app/services/: embedding_service.py  llm_service.py  matching_service.py  storage_service.py
backend/app/utils/: base64_handler.py
backend/migrations/: 001_add_structured_fields.sql  add_pgvector.sql
backend/scripts/: backfill_embeddings.py  run_migration.py
frontend/: .dockerignore  .gitignore  next.config.mjs  package-lock.json  package.json
frontend/public/: robots.txt
frontend/src/app/: layout.jsx  page.jsx
frontend/src/app/buscar/: page.jsx
frontend/src/app/map/: page.jsx
frontend/src/app/reportar/: page.jsx
frontend/src/components/: BankingScaleHero.jsx  BuscarPerrito.jsx  CaseStudiesCarousel.jsx  EstadisticasChile.jsx  FAQSection.jsx  Footer.jsx  HeroCatastro.jsx  IntegrationCarousel.jsx  MapaPerritos.jsx  MiniMapaDetalle.jsx  MiniMapaSelector.jsx  Navbar.jsx  PricingSection.jsx  ProductTeaserCard.jsx  ReportarPerrito.jsx
frontend/src/components/ui/: button.jsx
frontend/src/lib/: axios.js
frontend/src/services/: sightings.js
scraping/: analyze_dogs.py  pyproject.toml  scraper.py
telegram-bot/: .env.example  Dockerfile  README.md  bot.py  pyproject.toml
