[project]
name = "fastapi-app"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.34.0",
    "google-generativeai>=0.8.3",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    "google-cloud-storage>=2.10.0",
    "pillow>=10.0.0",
    "pgvector>=0.3.0",
    "google-cloud-aiplatform>=1.38.0",
]
